--- a/app/src/main/res/layout/dialog_live_house_gift.xml
+++ b/app/src/main/res/layout/dialog_live_house_gift.xml
@@ -54,7 +54,8 @@
         android:id="@+id/container"
         android:layout_width="match_parent"
         android:layout_height="185dp"
-        android:layout_marginTop="4.5dp">
+        android:layout_marginTop="4.5dp"
+        android:overScrollMode="never">
 
     </android.support.v4.view.ViewPager>
 
