--- a/app/src/main/res/layout/activity_nick_name_modify.xml
+++ b/app/src/main/res/layout/activity_nick_name_modify.xml
@@ -44,12 +44,25 @@
 
     </RelativeLayout>
 
-    <TextView
-        android:id="@+id/tv_limit_nick_name_modify"
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="13dp"
         android:layout_marginTop="6dp"
-        android:textColor="#70000000"
-        android:textSize="12sp" />
+        android:orientation="horizontal">
+
+        <TextView
+            android:id="@+id/tv_limit_nick_name_modify"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="13dp"
+            android:textColor="#70000000"
+            android:textSize="12sp" />
+
+        <TextView
+            android:id="@+id/tv_limit2_nick_name_modify"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="#70000000"
+            android:textSize="12sp" />
+    </LinearLayout>
 </LinearLayout>
