--- a/app/src/main/res/layout/dialog_sign_success.xml
+++ b/app/src/main/res/layout/dialog_sign_success.xml
@@ -21,8 +21,9 @@
             android:id="@+id/tv_content_sign_success"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:gravity="center"
             android:textColor="#70000000"
-            android:textSize="14sp"/>
+            android:textSize="14sp" />
     </LinearLayout>
 
     <View
