--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -303,7 +303,8 @@
                                 android:layout_height="wrap_content"
                                 android:textColor="#ffea00"
                                 android:textSize="18sp"
-                                android:textStyle="italic|bold" />
+                                android:textStyle="italic|bold"
+                                android:typeface="normal" />
 
                             <TextView
                                 android:layout_width="wrap_content"
@@ -344,7 +345,8 @@
                                 android:layout_height="wrap_content"
                                 android:textColor="#ffea00"
                                 android:textSize="18sp"
-                                android:textStyle="italic|bold" />
+                                android:textStyle="italic|bold"
+                                android:typeface="normal" />
 
                             <TextView
                                 android:layout_width="wrap_content"
