--- a/app/src/main/res/layout/dialog_live_no_money.xml
+++ b/app/src/main/res/layout/dialog_live_no_money.xml
@@ -42,7 +42,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="18dp"
-        android:layout_marginTop="18dp" />
+        android:layout_marginTop="18dp"
+        android:overScrollMode="never" />
 
     <View
         android:layout_width="match_parent"
