--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -765,8 +765,6 @@
                     android:layout_width="284dp"
                     android:layout_height="25dp"
                     android:layout_centerVertical="true"
-                    android:layout_marginLeft="50dp"
-                    android:layout_marginRight="50dp"
                     android:layout_marginTop="2dp"
                     android:background="@drawable/bg_broad_bottom_live"
                     android:visibility="gone"
@@ -774,9 +772,10 @@
 
                     <ImageView
                         android:id="@+id/iv_broad_bottom"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
+                        android:layout_width="20dp"
+                        android:layout_height="14dp"
                         android:layout_marginLeft="6dp"
+                        android:scaleType="fitXY"
                         android:src="@drawable/ic_broad_bottom_live"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintLeft_toLeftOf="parent"
