--- a/app/src/main/res/layout/fragment_red_bag.xml
+++ b/app/src/main/res/layout/fragment_red_bag.xml
@@ -9,17 +9,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center_horizontal"
-        android:orientation="vertical">
+        android:orientation="vertical"
+        android:paddingLeft="23dp"
+        android:paddingRight="23dp">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="37dp"
-            android:layout_marginRight="37dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp">
+            android:gravity="bottom"
+            android:orientation="horizontal">
 
             <TextView
                 android:id="@+id/tv_money"
@@ -38,7 +36,6 @@
                 android:gravity="end"
                 android:inputType="number"
                 android:maxLength="8"
-                android:paddingBottom="12dp"
                 android:paddingLeft="6.5dp"
                 android:paddingRight="6.5dp"
                 android:paddingTop="12dp"
@@ -57,20 +54,17 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginLeft="45dp"
-            android:layout_marginRight="45dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginTop="2dp"
             android:background="#10000000" />
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_marginLeft="37dp"
-            android:layout_marginRight="37dp"
-            android:layout_marginTop="14.5dp"
-            android:gravity="center_vertical"
-            android:orientation="horizontal"
-            android:paddingLeft="16dp"
-            android:paddingRight="16dp">
+            android:layout_marginTop="35dp"
+            android:gravity="bottom"
+            android:orientation="horizontal">
 
             <TextView
                 android:layout_width="wrap_content"
@@ -88,7 +82,6 @@
                 android:gravity="end"
                 android:inputType="number"
                 android:maxLength="8"
-                android:paddingBottom="12dp"
                 android:paddingLeft="6.5dp"
                 android:paddingRight="6.5dp"
                 android:paddingTop="12dp"
@@ -108,8 +101,9 @@
         <View
             android:layout_width="match_parent"
             android:layout_height="1dp"
-            android:layout_marginLeft="45dp"
-            android:layout_marginRight="45dp"
+            android:layout_marginLeft="1dp"
+            android:layout_marginRight="1dp"
+            android:layout_marginTop="2dp"
             android:background="#10000000" />
 
 
@@ -117,7 +111,7 @@
             android:id="@+id/tv_total"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="21.5dp"
+            android:layout_marginTop="26dp"
             android:drawableLeft="@drawable/ic_money_red_bag"
             android:drawablePadding="9.5dp"
             android:text="10,000"
