--- a/app/src/main/res/layout/fragment_my_royal_level.xml
+++ b/app/src/main/res/layout/fragment_my_royal_level.xml
@@ -1,226 +1,134 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical">
+    android:background="@color/white">
 
-    <RelativeLayout
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="290dp"
-        android:background="#f6f6f6"
-        android:paddingBottom="10dp">
-
-        <ImageView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:scaleType="fitXY"
-            android:src="@drawable/bg_my_royal" />
-
-        <ImageView
-            android:id="@+id/iv_royal_level"
-            android:layout_width="90dp"
-            android:layout_height="32dp"
-            android:layout_centerHorizontal="true"
-            android:layout_marginTop="54dp" />
-
-        <TextView
-            android:id="@+id/tv_royal_level"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/iv_royal_level"
-            android:layout_marginTop="17dp"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:textSize="13sp" />
-
-        <TextView
-            android:id="@+id/tv_keep_level"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_royal_level"
-            android:gravity="center"
-            android:textColor="@color/white"
-            android:textSize="13sp" />
-
-        <com.whzl.mengbi.ui.widget.view.MyLevelProgressLayout
-            android:id="@+id/evl_royal_level"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_below="@id/tv_keep_level"
-            android:layout_marginTop="12dp" />
+        android:layout_height="match_parent"
+        android:orientation="vertical">
 
         <RelativeLayout
             android:layout_width="match_parent"
-            android:layout_height="87dp"
-            android:layout_alignParentBottom="true"
-            android:layout_marginLeft="10dp"
-            android:layout_marginRight="12dp"
-            android:background="@drawable/shape_radius_five">
+            android:layout_height="290dp"
+            android:background="#f6f6f6"
+            android:paddingBottom="10dp">
+
+            <ImageView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:scaleType="fitXY"
+                android:src="@drawable/bg_my_royal" />
+
+            <ImageView
+                android:id="@+id/iv_royal_level"
+                android:layout_width="90dp"
+                android:layout_height="32dp"
+                android:layout_centerHorizontal="true"
+                android:layout_marginTop="54dp" />
 
             <TextView
-                android:id="@+id/tv_how_update"
-                android:layout_width="wrap_content"
+                android:id="@+id/tv_royal_level"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="10dp"
-                android:text="如何升级"
+                android:layout_below="@id/iv_royal_level"
+                android:layout_marginTop="17dp"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:textSize="13sp" />
+
+            <TextView
+                android:id="@+id/tv_keep_level"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_royal_level"
+                android:gravity="center"
+                android:textColor="@color/white"
+                android:textSize="13sp" />
+
+            <com.whzl.mengbi.ui.widget.view.MyLevelProgressLayout
+                android:id="@+id/evl_royal_level"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_below="@id/tv_keep_level"
+                android:layout_marginTop="12dp" />
+
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="87dp"
+                android:layout_alignParentBottom="true"
+                android:layout_marginLeft="10dp"
+                android:layout_marginRight="12dp"
+                android:background="@drawable/shape_radius_five">
+
+                <TextView
+                    android:id="@+id/tv_how_update"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="10dp"
+                    android:text="如何升级"
+                    android:textColor="@color/tran_black2"
+                    android:textSize="15sp" />
+
+                <TextView
+                    android:id="@+id/tv_msg_1"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_how_update"
+                    android:layout_marginLeft="12dp"
+                    android:layout_marginTop="10dp"
+                    android:text="通过充值升级贵族"
+                    android:textColor="@color/tran_black8"
+                    android:textSize="13sp" />
+
+                <TextView
+                    android:id="@+id/tv_msg_2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_below="@id/tv_msg_1"
+                    android:layout_marginLeft="12dp"
+                    android:text="1元 = 1点贵族经验"
+                    android:textColor="@color/tran_black5"
+                    android:textSize="13sp" />
+
+                <Button
+                    android:id="@+id/btn_recharge"
+                    android:layout_width="104dp"
+                    android:layout_height="35dp"
+                    android:layout_alignParentRight="true"
+                    android:layout_below="@id/tv_how_update"
+                    android:layout_marginRight="14dp"
+                    android:layout_marginTop="10dp"
+                    android:background="@drawable/shape_yellow_btn"
+                    android:text="现在去充值"
+                    android:textColor="#010101"
+                    android:textSize="13sp" />
+            </RelativeLayout>
+        </RelativeLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="35dp"
+                android:gravity="center_horizontal"
+                android:text="等级特权"
                 android:textColor="@color/tran_black2"
                 android:textSize="15sp" />
 
-            <TextView
-                android:id="@+id/tv_msg_1"
-                android:layout_width="wrap_content"
+            <android.support.v7.widget.RecyclerView
+                android:id="@+id/rv_my_royal_level"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_below="@id/tv_how_update"
-                android:layout_marginLeft="12dp"
-                android:layout_marginTop="10dp"
-                android:text="通过充值升级贵族"
-                android:textColor="@color/tran_black8"
-                android:textSize="13sp" />
+                android:overScrollMode="never" />
 
-            <TextView
-                android:id="@+id/tv_msg_2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tv_msg_1"
-                android:layout_marginLeft="12dp"
-                android:text="1元 = 1点贵族经验"
-                android:textColor="@color/tran_black5"
-                android:textSize="13sp" />
-
-            <Button
-                android:id="@+id/btn_recharge"
-                android:layout_width="104dp"
-                android:layout_height="35dp"
-                android:layout_alignParentRight="true"
-                android:layout_below="@id/tv_how_update"
-                android:layout_marginRight="14dp"
-                android:layout_marginTop="10dp"
-                android:background="@drawable/shape_yellow_btn"
-                android:text="现在去充值"
-                android:textColor="#010101"
-                android:textSize="13sp" />
-        </RelativeLayout>
-    </RelativeLayout>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:background="@color/white"
-        android:orientation="vertical">
-
-        <TextView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="35dp"
-            android:gravity="center_horizontal"
-            android:text="等级特权"
-            android:textColor="@color/tran_black2"
-            android:textSize="15sp" />
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
-            android:orientation="horizontal">
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:drawablePadding="5dp"
-                android:drawableTop="@drawable/ic_my_royal_1"
-                android:gravity="center_horizontal"
-                android:text="专属勋章"
-                android:textColor="@color/tran_black2"
-                android:textSize="11sp" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:drawablePadding="5dp"
-                android:drawableTop="@drawable/ic_my_royal_2"
-                android:gravity="center_horizontal"
-                android:text="升级全站广播播报"
-                android:textColor="@color/tran_black2"
-                android:textSize="11sp" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:drawablePadding="5dp"
-                android:drawableTop="@drawable/ic_my_royal_3"
-                android:gravity="center_horizontal"
-                android:text="排位靠前"
-                android:textColor="@color/tran_black2"
-                android:textSize="11sp" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:drawablePadding="5dp"
-                android:drawableTop="@drawable/ic_my_royal_4"
-                android:gravity="center_horizontal"
-                android:text="专属座驾"
-                android:textColor="@color/tran_black2"
-                android:textSize="11sp" />
         </LinearLayout>
 
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="18dp"
-            android:orientation="horizontal">
-
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:drawablePadding="5dp"
-                android:drawableTop="@drawable/ic_my_royal_6"
-                android:gravity="center_horizontal"
-                android:text="防禁踢"
-                android:textColor="@color/tran_black2"
-                android:textSize="11sp" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:drawablePadding="5dp"
-                android:drawableTop="@drawable/ic_my_royal_7"
-                android:gravity="center_horizontal"
-                android:text="发言字数+200"
-                android:textColor="@color/tran_black2"
-                android:textSize="11sp" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:drawablePadding="5dp"
-                android:drawableTop="@drawable/ic_my_royal_8"
-                android:gravity="center_horizontal"
-                android:text="与主播私聊"
-                android:textColor="@color/tran_black2"
-                android:textSize="11sp" />
-
-            <TextView
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_weight="1"
-                android:drawablePadding="5dp"
-                android:drawableTop="@drawable/ic_my_royal_5"
-                android:gravity="center_horizontal"
-                android:text="返利券奖励"
-                android:textColor="@color/tran_black2"
-                android:textSize="11sp"
-                android:visibility="invisible" />
-        </LinearLayout>
     </LinearLayout>
-
-</LinearLayout>
+</android.support.v4.widget.NestedScrollView>
