--- a/app/src/main/res/layout/welcome_item_chat_msg.xml
+++ b/app/src/main/res/layout/welcome_item_chat_msg.xml
@@ -12,6 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:lineSpacingExtra="2dp"
+        android:longClickable="false"
         android:maxLines="100"
         android:textSize="@dimen/text_chat_size">
 
