--- a/app/src/main/res/layout/item_guardian.xml
+++ b/app/src/main/res/layout/item_guardian.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="62dp">
 
-    <com.whzl.mengbi.ui.widget.view.CircleImageView
+    <ImageView
         android:id="@+id/iv_avatar"
         android:layout_width="44dp"
         android:layout_height="44dp"
