--- a/app/src/main/res/layout/item_anchor_home.xml
+++ b/app/src/main/res/layout/item_anchor_home.xml
@@ -13,21 +13,21 @@
         app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintLeft_toRightOf="parent"
-        tools:layout_editor_absoluteY="0dp"
-        tools:ignore="MissingConstraints" />
+        tools:ignore="MissingConstraints"
+        tools:layout_editor_absoluteY="0dp" />
 
     <TextView
         android:id="@+id/tv_is_live_mark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:layout_marginRight="5dp"
+        android:layout_marginTop="5dp"
         android:background="@drawable/bg_home_state"
         android:drawablePadding="5dp"
-        android:paddingLeft="4dp"
-        android:paddingTop="2dp"
-        android:paddingRight="4dp"
         android:paddingBottom="2dp"
+        android:paddingLeft="4dp"
+        android:paddingRight="4dp"
+        android:paddingTop="2dp"
         android:text="直播中"
         android:textColor="@color/white"
         android:textSize="9sp"
@@ -39,8 +39,8 @@
         android:id="@+id/iv_is_live_mark"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
         android:layout_marginRight="14dp"
+        android:layout_marginTop="5dp"
         android:src="@drawable/ic_home_live_middle"
         android:visibility="gone"
         app:layout_constraintRight_toRightOf="parent"
@@ -50,7 +50,6 @@
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
         android:layout_marginTop="5dp"
         android:orientation="vertical"
         app:layout_constraintLeft_toLeftOf="parent"
@@ -76,9 +75,9 @@
             android:id="@+id/iv_pk"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
             android:layout_marginBottom="5dp"
             android:src="@drawable/ic_home_pk"
-            android:layout_gravity="center_horizontal"
             android:visibility="gone" />
     </LinearLayout>
 
@@ -94,8 +93,8 @@
             android:layout_height="wrap_content"
             android:layout_alignParentBottom="true"
             android:layout_centerVertical="true"
-            android:layout_marginLeft="6dp"
             android:layout_marginBottom="4dp"
+            android:layout_marginLeft="6dp"
             android:ellipsize="end"
             android:maxLength="12"
             android:singleLine="true"
@@ -107,11 +106,11 @@
             android:id="@+id/tv_watch_count"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
             android:layout_alignParentBottom="true"
+            android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
-            android:layout_marginRight="3dp"
             android:layout_marginBottom="4dp"
+            android:layout_marginRight="3dp"
             android:textColor="@color/white"
             android:textSize="12sp"
             android:textStyle="bold" />
