--- a/app/src/main/res/layout/layout_gift_anim.xml
+++ b/app/src/main/res/layout/layout_gift_anim.xml
@@ -2,65 +2,83 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/gift_anim_view"
     android:layout_width="match_parent"
-    android:layout_height="34dp"
-    android:layout_marginBottom="30dp"
-    android:layout_marginLeft="20dp">
+    android:layout_height="51dp"
+    android:layout_marginBottom="19dp"
+    android:layout_marginLeft="3dp">
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginLeft="17dp"
-        android:src="@drawable/gift_anim_normal_bg"/>
+        android:layout_width="255dp"
+        android:layout_height="41dp"
+        android:layout_alignParentBottom="true"
+        android:scaleType="fitStart"
+        android:src="@drawable/gift_anim_normal_bg" />
 
     <com.whzl.mengbi.ui.widget.view.CircleImageView
         android:id="@+id/iv_anim_gift_avatar"
-        android:layout_width="34dp"
-        android:layout_height="match_parent" />
+        android:layout_width="39dp"
+        android:layout_height="39dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="1dp"
+        android:layout_marginLeft="1dp" />
 
 
     <LinearLayout
         android:id="@+id/ll_in_container"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
+        android:layout_height="41dp"
+        android:layout_alignParentBottom="true"
         android:layout_marginLeft="6dp"
         android:layout_toRightOf="@id/iv_anim_gift_avatar"
         android:gravity="center_vertical"
-        android:orientation="vertical"
-        android:minWidth="54dp">
+        android:minWidth="54dp"
+        android:orientation="vertical">
 
         <TextView
             android:id="@+id/tv_anim_gift_form"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#f9f9f9"
-            android:textSize="11sp" />
+            android:textColor="#fefefe"
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/tv_anim_gift_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#f9f9f9"
-            android:textSize="10sp"
-            android:textStyle="bold" />
+            android:textColor="#fefefe"
+            android:textSize="9sp" />
     </LinearLayout>
 
     <ImageView
         android:id="@+id/iv_anim_gift_icon"
         android:layout_width="wrap_content"
-        android:layout_height="match_parent"
-        android:layout_marginRight="14dp"
-        android:layout_toRightOf="@id/ll_in_container"/>
+        android:layout_height="50dp"
+        android:layout_marginLeft="9dp"
+        android:layout_toRightOf="@id/ll_in_container" />
 
-    <TextView
+    <com.whzl.mengbi.ui.widget.view.GiftTextView
+        android:id="@+id/tv_x_gift_count"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="4dp"
+        android:layout_toRightOf="@id/iv_anim_gift_icon"
+        android:gravity="bottom"
+        android:paddingBottom="4dp"
+        android:text=" x"
+        android:textColor="#faf9f9"
+        android:textSize="25sp"
+        android:textStyle="bold|italic" />
+
+    <com.whzl.mengbi.ui.widget.view.GiftTextView
         android:id="@+id/tv_anim_gift_count"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerVertical="true"
-        android:paddingBottom="2dp"
+        android:layout_height="match_parent"
+        android:layout_marginLeft="4dp"
+        android:layout_toRightOf="@id/tv_x_gift_count"
+        android:gravity="bottom"
+        android:text="111"
         android:textColor="#faf9f9"
-        android:textSize="18sp"
-        android:textStyle="bold"
-        android:layout_toRightOf="@id/iv_anim_gift_icon"
-        android:layout_marginLeft="5dp"/>
+        android:textSize="34sp"
+        android:textStyle="italic|bold" />
 
 </RelativeLayout>
