--- a/app/src/main/res/layout/combo_gift_layout.xml
+++ b/app/src/main/res/layout/combo_gift_layout.xml
@@ -2,38 +2,37 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/gift_anim_view"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:layout_marginBottom="20dp"
-    android:layout_marginLeft="30dp">
+    android:layout_height="51dp"
+    android:layout_marginBottom="19dp"
+    android:layout_marginLeft="3dp">
 
 
-    <RelativeLayout
-        android:id="@+id/rl_avatar_container"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="13dp">
-
-        <ImageView
-            android:id="@+id/iv_anim_bg"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_centerVertical="true" />
-
-        <com.whzl.mengbi.ui.widget.view.CircleImageView
-            android:id="@+id/iv_anim_gift_avatar"
-            android:layout_width="34dp"
-            android:layout_height="34dp"
-            android:layout_alignTop="@id/iv_anim_bg" />
+    <ImageView
+        android:id="@+id/iv_anim_bg"
+        android:layout_width="255dp"
+        android:layout_height="41dp"
+        android:layout_alignParentBottom="true"
+        android:scaleType="fitStart"
+        android:src="@drawable/gift_anim_normal_bg" />
 
 
-    </RelativeLayout>
+    <com.whzl.mengbi.ui.widget.view.CircleImageView
+        android:id="@+id/iv_anim_gift_avatar"
+        android:layout_width="39dp"
+        android:layout_height="39dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="1dp"
+        android:layout_marginLeft="1dp" />
+
 
     <LinearLayout
         android:id="@+id/ll_info_container"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/rl_avatar_container"
-        android:layout_marginLeft="44dp"
+        android:layout_height="41dp"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="6dp"
+        android:layout_toRightOf="@id/iv_anim_gift_avatar"
+        android:gravity="center_vertical"
         android:minWidth="54dp"
         android:orientation="vertical">
 
@@ -41,60 +40,74 @@
             android:id="@+id/tv_anim_gift_form"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textColor="#f9f9f9"
-            android:textSize="11sp" />
+            android:ellipsize="middle"
+            android:maxWidth="90dp"
+            android:minWidth="90dp"
+            android:singleLine="true"
+            android:textColor="#fefefe"
+            android:textSize="12sp" />
 
         <TextView
             android:id="@+id/tv_anim_gift_name"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginBottom="4dp"
-            android:textColor="#f9f9f9"
-            android:textSize="10sp"
-            android:textStyle="bold" />
+            android:textColor="#fefefe"
+            android:textSize="9sp" />
     </LinearLayout>
 
     <ImageView
         android:id="@+id/iv_anim_gift_icon"
         android:layout_width="wrap_content"
-        android:layout_height="34dp"
-        android:layout_alignBottom="@id/rl_avatar_container"
-        android:layout_marginBottom="2dp"
-        android:layout_marginLeft="10dp"
+        android:layout_height="50dp"
+        android:layout_marginLeft="9dp"
         android:layout_toRightOf="@id/ll_info_container" />
+
+    <com.whzl.mengbi.ui.widget.view.GiftTextView
+        android:id="@+id/tv_combo_time_desc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_marginBottom="3dp"
+        android:layout_marginLeft="2dp"
+        android:layout_toRightOf="@id/iv_anim_gift_icon"
+        android:text="连送"
+        android:textSize="14sp" />
 
     <TextView
         android:id="@+id/tv_anim_gift_count"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="10dp"
+        android:layout_above="@id/tv_combo_time_desc"
+        android:layout_marginLeft="4dp"
         android:layout_toRightOf="@id/iv_anim_gift_icon"
-        android:textColor="#faf9f9"
-        android:textSize="18sp"
+        android:textColor="#f8da36"
+        android:textSize="12sp"
         android:textStyle="bold" />
 
-    <TextView
-        android:id="@+id/tv_combo_time_desc"
+    <com.whzl.mengbi.ui.widget.view.GiftTextView
+        android:id="@+id/tv_x_gift_count"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tv_anim_gift_count"
-        android:layout_marginLeft="10dp"
-        android:layout_marginTop="3dp"
-        android:layout_toRightOf="@id/iv_anim_gift_icon"
-        android:text="连击 "
-        android:textColor="@color/player_red"
-        android:textSize="11sp" />
+        android:layout_height="match_parent"
+        android:layout_alignParentBottom="true"
+        android:layout_marginLeft="4dp"
+        android:layout_toRightOf="@id/tv_combo_time_desc"
+        android:gravity="bottom"
+        android:paddingBottom="4dp"
+        android:text=" x"
+        android:textColor="#faf9f9"
+        android:textSize="25sp"
+        android:textStyle="bold|italic" />
 
-    <TextView
+    <com.whzl.mengbi.ui.widget.view.GiftTextView
         android:id="@+id/tv_combo_time"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignBottom="@id/tv_combo_time_desc"
-        android:layout_marginBottom="-5dp"
-        android:layout_toRightOf="@id/tv_combo_time_desc"
-        android:textColor="@color/player_red"
-        android:textSize="22sp"
-        android:textStyle="bold" />
+        android:layout_height="match_parent"
+        android:layout_marginLeft="4dp"
+        android:layout_toRightOf="@id/tv_x_gift_count"
+        android:gravity="bottom"
+        android:textColor="#faf9f9"
+        android:textSize="34sp"
+        android:textStyle="italic|bold" />
 
 </RelativeLayout>
 
