--- a/app/src/main/res/layout/activity_live_display_new.xml
+++ b/app/src/main/res/layout/activity_live_display_new.xml
@@ -530,6 +530,7 @@
                         android:background="@drawable/bg_red_pack_long_live"
                         android:gravity="center_vertical"
                         android:paddingLeft="45dp"
+                        android:paddingRight="20dp"
                         android:singleLine="true"
                         android:textColor="#fefefe"
                         android:textSize="8.5sp"
@@ -727,14 +728,14 @@
                         android:layout_height="55dp" />
 
                     <FrameLayout
-                        android:layout_marginTop="14dp"
                         android:layout_width="match_parent"
-                        android:layout_height="55dp" />
+                        android:layout_height="55dp"
+                        android:layout_marginTop="14dp" />
 
                     <FrameLayout
-                        android:layout_marginTop="14dp"
                         android:layout_width="match_parent"
-                        android:layout_height="55dp" />
+                        android:layout_height="55dp"
+                        android:layout_marginTop="14dp" />
                 </LinearLayout>
 
                 <com.youth.banner.Banner
